adding navbar and footer components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
 <app-navbar></app-navbar>
+<div class="main">
+    <!-- MAIN CONTENT -->
+    <div class="main-content">
+      <div class="container-fluid">
+        <!-- OVERVIEW -->
+        <div class="panel panel-headline">
+          <div class="panel-body">
+            <h1>Seja bem-vindo</h1>
+          </div>
+        </div>
+        <!-- END OVERVIEW -->
+      </div>
+    </div>
+    <!-- END MAIN CONTENT -->
+  </div>
+<app-footer></app-footer>
