--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -8,7 +8,7 @@
             <div class="logo text-center"><img src="assets/img/logo-dark.png" alt="Klorofil Logo"></div>
             <p class="lead">Faça login na sua conta</p>
           </div>
-          <form class="form-auth-small" action="index.php">
+          <form class="form-auth-small" action="">
             <div class="form-group">
               <label for="signin-email" class="control-label sr-only">E-mail</label>
               <input type="email" class="form-control" id="signin-email" placeholder="E-mail">
