reset-password and register pages

--- a/src/app/reset-password-page/reset-password-page.component.html
+++ b/src/app/reset-password-page/reset-password-page.component.html
@@ -1,1 +1,29 @@
-<p>reset-password-page works!</p>
+<br><br>
+<div class="vertical-align-wrap">
+    <div class="vertical-align-middle">
+        <div class="auth-box lockscreen clearfix">
+            <div class="col-md-3">
+                <a href="/login" class="btn btn-primary btn-block"><i class="fa fa-sign-in"></i> LOGIN</a>
+            </div>
+            <div class="content">
+                <h1 class="sr-only">ClassRoom Space</h1>
+                <div class="logo text-center"><img src="assets/img/logo-dark.png" alt="Klorofil Logo"></div>
+                <div class="user text-center">
+                    <img src="assets/img/user-medium.png" class="img-circle" alt="Avatar">
+                    <h2 class="name">Admin</h2>
+                    <p><small>lucas@example.com</small></p>
+                </div>
+                <form action="">
+                    <div class="form-group">
+                        <input type="password" class="form-control" placeholder="Nova senha...">
+                    </div>
+                    <div class="input-group">
+                        <input type="password" class="form-control" placeholder="Confirma senha...">
+                        <span class="input-group-btn"><button type="submit" class="btn btn-primary"><i
+                                    class="fa fa-arrow-right"></i></button></span>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
