--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -23,9 +23,10 @@
                 <span>Lembrar-se de mim</span>
               </label>
             </div>
-            <button type="submit" class="btn btn-primary btn-lg btn-block">LOGIN</button>
+            <button type="submit" class="btn btn-primary btn-lg btn-block" >LOGIN</button>
+            <a href="/sigup" class="btn btn-default btn-lg btn-block">REGISTRE-SE</a>
             <div class="bottom">
-              <span class="helper-text"><i class="fa fa-lock"></i> <a href="#">Esqueceu a senha?</a></span>
+              <span class="helper-text"><i class="fa fa-lock"></i> <a href="/reset-password">Esqueceu a senha?</a></span>
             </div>
           </form>
         </div>
