--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -1,1 +1,39 @@
-<p>signup-page works!</p>
+<br><br>
+<div class="vertical-align-wrap">
+    <div class="vertical-align-middle">
+        <div class="auth-box lockscreen clearfix">
+            <div class="col-md-3">
+                <a href="/login" class="btn btn-primary btn-block"><i class="fa fa-sign-in"></i> LOGIN</a>
+            </div>
+            <div class="content">
+                <h1 class="sr-only">ClassRoom Space</h1>
+                <div class="user text-center">
+                    <img src="assets/img/user-medium.png" class="img-circle" alt="Avatar">
+                </div>
+                <form action="">
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" placeholder="Nome...">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" placeholder="Sobrenome...">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" placeholder="CPF...">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <input type="email" class="form-control" placeholder="E-mail...">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <input type="password" class="form-control" placeholder="Senha...">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" placeholder="Telefone...">
+                    </div>
+                    <div class="form-group col-md-12">
+                        <input type="file" class="form-control">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
