--- a/src/app/pages/account/login-page/login-page.component.html
+++ b/src/app/pages/account/login-page/login-page.component.html
@@ -24,7 +24,7 @@
               </label>
             </div>
             <button type="submit" class="btn btn-primary btn-lg btn-block" >LOGIN</button>
-            <a href="/sigup" class="btn btn-default btn-lg btn-block">REGISTRE-SE</a>
+            <a [routerLink]="['/signup']" class="btn btn-default btn-lg btn-block">REGISTRE-SE</a>
             <div class="bottom">
               <span class="helper-text"><i class="fa fa-lock"></i> <a href="/reset-password">Esqueceu a senha?</a></span>
             </div>
