--- a/src/app/pages/college/users-page/users-page.component.html
+++ b/src/app/pages/college/users-page/users-page.component.html
@@ -12,7 +12,15 @@
             </div>
             <div class="panel panel-headline">
                 <div class="panel-heading">
-                    <h3>Lista de Usuários</h3>
+                    <div class="col-md-6">
+                        <h3>Lista de Usuários</h3>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="input-group margin-top-20">
+                            <input type="text" value="" class="form-control" placeholder="Nome, e-mail...">
+                            <span class="input-group-btn"><a type="button" class="btn btn-primary"><i class="fa fa-search"></i> Filtrar</a></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="panel-body">
                     <table class="table table-striped table-responsive table-hover">
