modal delete confirmation

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -50,7 +50,7 @@
 			<ul class="nav">
         <li><a [routerLink]="['/']" routerLinkActive="active"><i class="lnr lnr-home"></i> <span>Home</span></a></li>
         <li>
-					<a href="#subColleges" data-toggle="collapse" class="collapsed"><i class="fa fa-building"></i>
+					<a href="#subColleges" data-toggle="collapse" class="collapsed"><i class="fa fa-university"></i>
 						<span>Faculdade</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
 					<div id="subColleges" class="collapse ">
 						<ul class="nav">
