--- a/src/app/pages/college/colleges-page/colleges-page.component.html
+++ b/src/app/pages/college/colleges-page/colleges-page.component.html
@@ -45,7 +45,7 @@
                                     <td class="text-right">
                                         <a [routerLink]="['/colleges/edit/', college.id]" class="btn btn-info"><i
                                                 class="fa fa-edit"></i></a> &nbsp;
-                                        <button data-toggle="modal" data-target="#confirmaDelete" class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                                        <button data-toggle="modal" data-target="#confirmDelete" class="btn btn-danger"><i class="fa fa-trash"></i></button>
                                     </td>
                                 </tr>
                             </tbody>
@@ -56,4 +56,3 @@
         </div>
     </div>
 </div>
-<app-delete-confirmation></app-delete-confirmation>
