--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -48,11 +48,12 @@
         <li><a [routerLink]="['/']" routerLinkActive="active"><i class="lnr lnr-home"></i> <span>Home</span></a></li>
         <li>
 					<a href="#subColleges" data-toggle="collapse" class="collapsed"><i class="fa fa-university"></i>
-						<span>Faculdades</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
+						<span>Faculdade</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
 					<div id="subColleges" class="collapse ">
 						<ul class="nav">
-							<li><a [routerLink]="['/colleges']" routerLinkActive="active">Lista</a></li>
-							<li><a [routerLink]="['/colleges/create']" routerLinkActive="active">Novo</a></li>
+							<li><a [routerLink]="['/colleges']" routerLinkActive="active">Lista de Faculdades</a></li>
+							<li><a [routerLink]="['/blocks']" routerLinkActive="active">Blocos</a></li>
+							<li><a [routerLink]="['/equipments']" routerLinkActive="active">Equipamentos</a></li>
 						</ul>
 					</div>
 				</li>
