--- a/src/app/pages/college/create-professor-page/create-professor-page.component.html
+++ b/src/app/pages/college/create-professor-page/create-professor-page.component.html
@@ -1,1 +1,60 @@
-<p>create-professor-page works!</p>
+<div class="main">
+  <div class="main-content">
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-md-6 text-left">
+                  <h3>ClassRoom Space</h3>
+                  <p><small><a [routerLink]="['/']">Início</a> > Professores > Novo</small></p>
+              </div>
+              <div class="col-md-6 text-right">
+                  <a [routerLink]="['/professors']" class="btn btn-primary btn-new"><i class="fa fa-chevron-left"></i> Voltar para Lista</a>
+              </div>
+          </div>
+          <div class="panel panel-headline">
+              <div class="panel-heading">
+                  <h3>Cadastrar Professor</h3>
+              </div>
+              <div class="panel-body">
+                  <form [formGroup]="form">
+                      <div class="form-group col-md-6">
+                          <label for="FirstName">Nome</label>
+                          <input type="text" [ngClass]="{'uk-form-danger': (!form.controls.firstName.valid && !form.controls.firstName.pristine)}" id="FirstName" class="form-control" formControlName="firstName" placeholder="Nome...">
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label for="LastName">Sobrenome</label>
+                          <input type="text" [ngClass]="{'uk-form-danger': (!form.controls.lastName.valid && !form.controls.lastName.pristine)}" id="LastName" class="form-control" formControlName="lastName" placeholder="Sobrenome...">
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label for="Email">E-mail</label>
+                          <input type="email" [ngClass]="{'uk-form-danger': (!form.controls.email.valid && !form.controls.email.pristine)}" id="Email" class="form-control" formControlName="email" placeholder="E-mail...">
+                      </div>
+                      <div class="form-group col-md-3">
+                          <label for="Document">CPF</label>
+                          <input type="text" [ngClass]="{'uk-form-danger': (!form.controls.document.valid && !form.controls.document.pristine)}" id="Document" class="form-control" formControlName="document" placeholder="CPF...">
+                      </div>
+                      <div class="form-group col-md-3">
+                          <label for="Phone">Telefone</label>
+                          <input type="text" [ngClass]="{'uk-form-danger': (!form.controls.phone.valid && !form.controls.phone.pristine)}" id="Phone" class="form-control" formControlName="phone" placeholder="Telefone...">
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label for="IdCourse">Curso</label>
+                          <select id="IdCourse" class="form-control" formControlName="idCourse">
+                            <option *ngFor="let course of courses$ | async" [value]="course.id">{{ course.description }}</option>
+                          </select>
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label for="Status">Status</label>
+                          <select id="Status" class="form-control" formControlName="status">
+                            <option value="0" selected>Inativo</option>
+                            <option value="1">Ativo</option>
+                          </select>
+                      </div>
+                      <div class="form-group text-right col-md-12">
+                          <button [disabled]="form.invalid" (click)="submit()" class="btn btn-success">Confirmar</button>
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
