--- a/src/app/components/shared/delete-confirmation/delete-confirmation.component.html
+++ b/src/app/components/shared/delete-confirmation/delete-confirmation.component.html
@@ -5,7 +5,7 @@
       <div class="modal-body">
         <div class="text-center">
           <h1 class="text-danger"><i class="fa fa-exclamation-circle delete-icon-size"></i></h1>
-          <h4>Tem certeza que deseja deletar este registro?</h4>
+          <h4>Tem certeza que deseja deletar {{description}}?</h4>
         </div>
       </div>
       <div class="modal-footer">
