--- a/src/app/components/shared/delete-confirmation/delete-confirmation.component.html
+++ b/src/app/components/shared/delete-confirmation/delete-confirmation.component.html
@@ -5,13 +5,13 @@
       <div class="modal-body">
         <div class="text-center">
           <h1 class="text-danger"><i class="fa fa-exclamation-circle delete-icon-size"></i></h1>
-          <h4>Tem certeza que deseja deletar {{description}}?</h4>
+          <h4>Tem certeza que deseja deletar este registro?</h4>
         </div>
       </div>
       <div class="modal-footer">
         <div class="text-center">
-          <button (click)="delete(id)" type="button" class="btn btn-danger">Deletar</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button mat-button [mat-dialog-close]="true" type="button" class="btn btn-danger">Deletar</button>
+          <button mat-button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
         </div>
       </div>
     </div>
