--- a/src/app/pages/account/reset-password-page/reset-password-page.component.html
+++ b/src/app/pages/account/reset-password-page/reset-password-page.component.html
@@ -3,7 +3,7 @@
     <div class="vertical-align-middle">
         <div class="auth-box lockscreen clearfix">
             <div class="col-md-3">
-                <a href="/login" class="btn btn-primary btn-block"><i class="fa fa-sign-in"></i> LOGIN</a>
+                <a [routerLink]="['/login']" class="btn btn-primary btn-block"><i class="fa fa-sign-in"></i> LOGIN</a>
             </div>
             <div class="content">
                 <h1 class="sr-only">ClassRoom Space</h1>
