--- a/src/app/pages/account/login-page/login-page.component.html
+++ b/src/app/pages/account/login-page/login-page.component.html
@@ -8,14 +8,14 @@
             <div class="logo text-center"><img src="assets/img/logo-dark.png" alt="Klorofil Logo"></div>
             <p class="lead">Faça login na sua conta</p>
           </div>
-          <form class="form-auth-small" action="">
+          <form class="form-auth-small" [formGroup]="form">
             <div class="form-group">
               <label for="signin-email" class="control-label sr-only">E-mail</label>
-              <input type="email" class="form-control" id="signin-email" placeholder="E-mail">
+              <input type="email" class="form-control" formControlName="email" placeholder="E-mail">
             </div>
             <div class="form-group">
-              <label for="signin-password" class="control-label sr-only">Password</label>
-              <input type="password" class="form-control" id="signin-password" placeholder="Senha">
+              <label for="signin-password" class="control-label sr-only">Senha</label>
+              <input type="password" class="form-control" formControlName="password" placeholder="Senha">
             </div>
             <div class="form-group clearfix">
               <label class="fancy-checkbox element-left">
@@ -23,12 +23,12 @@
                 <span>Lembrar-se de mim</span>
               </label>
             </div>
-            <button type="submit" class="btn btn-primary btn-lg btn-block">LOGIN</button>
-            <a [routerLink]="['/signup']" class="btn btn-default btn-lg btn-block">REGISTRE-SE</a>
-            <div class="bottom">
-              <span class="helper-text"><i class="fa fa-lock"></i> <a [routerLink]="['/reset-password']">Esqueceu a senha?</a></span>
-            </div>
           </form>
+          <button (click)="submit()" [disabled]="!form.valid" class="btn btn-primary btn-lg btn-block">LOGIN</button>
+          <a [routerLink]="['/signup']" class="btn btn-default btn-lg btn-block">REGISTRE-SE</a>
+          <div class="bottom">
+            <span class="helper-text"><i class="fa fa-lock"></i> <a [routerLink]="['/reset-password']">Esqueceu a senha?</a></span>
+          </div>
         </div>
       </div>
       <div class="right">
