--- a/src/app/pages/college/colleges-page/colleges-page.component.html
+++ b/src/app/pages/college/colleges-page/colleges-page.component.html
@@ -26,6 +26,9 @@
                 </div>
                 <div class="panel-body">
                     <div class="col-md-12">
+
+                        <app-loading *ngIf="busy"></app-loading>
+                        
                         <table class="table table-striped table-responsive table-hover">
                             <thead>
                                 <tr>
@@ -36,7 +39,7 @@
                                     <th></th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody *ngIf="!busy">
                                 <tr *ngFor="let college of colleges$ | async">
                                     <td>{{ college.name }}</td>
                                     <td>{{ college.document }}</td>
