--- a/src/app/pages/college/create-college-page/create-college-page.component.html
+++ b/src/app/pages/college/create-college-page/create-college-page.component.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="form-group col-md-4">
                             <label for="Document">CNPJ</label>
-                            <input type="text" [ngClass]="{'uk-form-danger': (!form.controls.document.valid && !form.controls.document.pristine)}" maxlength="18" id="Document" class="form-control" formControlName="document" placeholder="CNPJ...">
+                            <input type="text" mask="##.###.###/####-##" [ngClass]="{'uk-form-danger': (!form.controls.document.valid && !form.controls.document.pristine)}" maxlength="18" id="Document" class="form-control" formControlName="document" placeholder="CNPJ...">
                         </div>
                         <div class="form-group col-md-4">
                             <label for="Email">E-mail</label>
