--- a/src/app/pages/college/create-user-page/create-user-page.component.html
+++ b/src/app/pages/college/create-user-page/create-user-page.component.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="form-group col-md-3">
                             <label for="Document">CPF</label>
-                            <input type="text" [ngClass]="{'uk-form-danger': (!form.controls.document.valid && !form.controls.document.pristine)}" maxlength="18" id="Document" class="form-control" formControlName="document" placeholder="CPF...">
+                            <input type="text" mask="###.###.###-##" [ngClass]="{'uk-form-danger': (!form.controls.document.valid && !form.controls.document.pristine)}" maxlength="18" id="Document" class="form-control" formControlName="document" placeholder="CPF...">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="Image">Imagem</label>
