--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -11,11 +11,11 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="assets/img/user.png"
-							class="img-circle" alt="Avatar"><span>Seja bem-vindo, {{ user?.name }} </span> <i
+							class="img-circle" alt="Avatar"><span>Seja bem-vindo(a), {{ user?.name }} </span> <i
 							class="icon-submenu lnr lnr-chevron-down"></i></a>
 					<ul class="dropdown-menu">
-						<li><a [routerLink]="['/users/profile/user?.id']"><i class="lnr lnr-user"></i> <span>Meu Perfil</span></a></li>
-						<li><a [routerLink]="['/users/profile']"><i class="lnr lnr-cog"></i> <span>Configurações</span></a></li>
+						<li><a [routerLink]="['/users/profile/', user?.id]"><i class="lnr lnr-user"></i> <span>Meu Perfil</span></a></li>
+						<li><a [routerLink]="['/users/profile', user?.id]"><i class="lnr lnr-cog"></i> <span>Configurações</span></a></li>
 						<li><a [routerLink] (click)="logout()"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
 					</ul>
 				</li>
