--- a/src/app/pages/college/block-page/block-page.component.html
+++ b/src/app/pages/college/block-page/block-page.component.html
@@ -4,21 +4,21 @@
             <div class="row">
                 <div class="col-md-6 text-left">
                     <h3>ClassRoom Space</h3>
-                    <p><small><a [routerLink]="['/']">Início</a> > Faculdades</small></p>
+                    <p><small><a [routerLink]="['/']">Início</a> > Blocos</small></p>
                 </div>
                 <div class="col-md-6 text-right">
-                    <a [routerLink]="['/colleges/create']" class="btn btn-success btn-new"><i class="fa fa-plus"></i>
+                    <a [routerLink]="['/blocks/create']" class="btn btn-success btn-new"><i class="fa fa-plus"></i>
                         Novo Cadastro</a>
                 </div>
             </div>
             <div class="panel panel-headline">
                 <div class="panel-heading">
                     <div class="col-md-6">
-                        <h3>Lista de Faculdades</h3>
+                        <h3>Lista de Blocos</h3>
                     </div>
                     <div class="col-md-6">
                         <div class="input-group margin-top-20">
-                            <input type="text" value="" class="form-control" placeholder="Nome, CNPJ...">
+                            <input type="text" value="" class="form-control" placeholder="Digite algo...">
                             <span class="input-group-btn"><a type="button" class="btn btn-primary"><i
                                         class="fa fa-search"></i> Filtrar</a></span>
                         </div>
@@ -32,21 +32,15 @@
                         <table class="table table-striped table-responsive table-hover">
                             <thead>
                                 <tr>
-                                    <th>Nome</th>
-                                    <th>CNPJ</th>
-                                    <th>E-mail</th>
-                                    <th>Telefone</th>
-                                    <th></th>
+                                    <th>Descrição</th>
+                                    <th class="text-right"></th>
                                 </tr>
                             </thead>
                             <tbody *ngIf="!busy">
-                                <tr *ngFor="let college of colleges$ | async">
-                                    <td>{{ college.name }}</td>
-                                    <td>{{ college.document }}</td>
-                                    <td>{{ college.email }}</td>
-                                    <td>{{ college.phone }}</td>
+                                <tr *ngFor="let block of blocks$ | async">
+                                    <td>{{ block.description }}</td>
                                     <td class="text-right">
-                                        <a [routerLink]="['/colleges/edit/', college.id]" class="btn btn-info"><i
+                                        <a [routerLink]="['/blocks/edit/', block.id]" class="btn btn-info"><i
                                                 class="fa fa-edit"></i></a> &nbsp;
                                         <button data-toggle="modal" data-target="#confirmDelete" class="btn btn-danger"><i class="fa fa-trash"></i></button>
                                     </td>
