--- a/src/app/pages/college/create-college-page/create-college-page.component.html
+++ b/src/app/pages/college/create-college-page/create-college-page.component.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="form-group col-md-4">
                             <label for="Phone">Telefone</label>
-                            <input type="text" id="Phone" class="form-control" formControlName="phone" placeholder="Telefone...">
+                            <input type="text" mask="(##) # ####-####" id="Phone" class="form-control" formControlName="phone" placeholder="Telefone...">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="Image">Imagem</label>
