--- a/src/app/pages/college/create-user-page/create-user-page.component.html
+++ b/src/app/pages/college/create-user-page/create-user-page.component.html
@@ -1,62 +1,81 @@
 <div class="main">
-    <div class="main-content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6 text-left">
-                    <h3>ClassRoom Space</h3>
-                    <p><small><a [routerLink]="['/']">Início</a> > Usuários > Novo</small></p>
-                </div>
-                <div class="col-md-6 text-right">
-                    <a [routerLink]="['/users']" class="btn btn-primary btn-new"><i class="fa fa-chevron-left"></i> Voltar para Lista</a>
-                </div>
-            </div>
-            <div class="panel panel-headline">
-                <div class="panel-heading">
-                    <h3>Novo Usuário</h3>
-                </div>
-                <div class="panel-body">
-                    <form [formGroup]="form" *ngIf="!busy">
-                        <div class="form-group col-md-6 margin-bottom-10">
-                            <label for="FirstName">Nome</label>
-                            <input type="text" [ngClass]="{'uk-form-danger': (!form.controls.firstName.valid && !form.controls.firstName.pristine)}" id="FirstName" class="form-control" formControlName="firstName" placeholder="Nome...">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="LastName">Sobrenome</label>
-                            <input type="text" [ngClass]="{'uk-form-danger': (!form.controls.lastName.valid && !form.controls.lastName.pristine)}" id="LastName" class="form-control" formControlName="lastName" placeholder="Sobrenome...">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="Email">E-mail</label>
-                            <input type="email" [ngClass]="{'uk-form-danger': (!form.controls.email.valid && !form.controls.email.pristine)}" id="Email" class="form-control" formControlName="email" placeholder="E-mail...">
-                        </div>
-                        <div class="form-group col-md-3">
-                            <label for="Password">Senha</label>
-                            <input type="password" [ngClass]="{'uk-form-danger': (!form.controls.password.valid && !form.controls.password.pristine)}" id="Password" class="form-control" formControlName="password" placeholder="Senha...">
-                        </div>
-                        <div class="form-group col-md-3">
-                            <label for="Document">CPF</label>
-                            <input type="text" mask="###.###.###-##" [ngClass]="{'uk-form-danger': (!form.controls.document.valid && !form.controls.document.pristine)}" maxlength="18" id="Document" class="form-control" formControlName="document" placeholder="CPF...">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="Image">Imagem</label>
-                            <input type="file" id="Image" formControlName="image" class="form-control">
-                        </div>
-                        <div class="form-group col-md-3">
-                            <label for="Phone">Telefone</label>
-                            <input type="text" id="Phone" class="form-control" formControlName="phone" placeholder="Telefone...">
-                        </div>
-                        <div class="form-group col-md-3">
-                            <label for="Status">Status</label>
-                            <select id="Status" class="form-control" formControlName="status">
-                              <option value="0">Inativo</option>
-                              <option value="1">Ativo</option>
-                            </select>
-                        </div>
-                        <div class="form-group text-right col-md-12">
-                            <button [disabled]="form.invalid" (click)="submit()" class="btn btn-success">Cadastrar</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+  <div class="main-content">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 text-left">
+          <h3>ClassRoom Space</h3>
+          <p><small><a [routerLink]="['/']">Início</a> > Usuários > Novo</small></p>
         </div>
+        <div class="col-md-6 text-right">
+          <a [routerLink]="['/users']" class="btn btn-primary btn-new"><i class="fa fa-chevron-left"></i> Voltar para
+            Lista</a>
+        </div>
+      </div>
+      <div class="panel panel-headline">
+        <div class="panel-heading">
+          <h3>Novo Usuário</h3>
+        </div>
+        <div class="panel-body">
+          <form [formGroup]="form" *ngIf="!busy">
+            <div class="col-md-3">
+              <div class="card">
+                <!-- https://kprofiles.com/wp-content/uploads/2019/04/Jungah-Marriage.png -->
+                  <img [src]="(imgURL != null ? imgURL : imageSrc)" alt="John" class="image-full">
+                </div>
+            </div>
+            <div class="col-md-9">
+              <div class="form-group col-md-6 margin-bottom-10">
+                <label for="FirstName">Nome</label>
+                <input type="text"
+                  [ngClass]="{'uk-form-danger': (!form.controls.firstName.valid && !form.controls.firstName.pristine)}"
+                  id="FirstName" class="form-control" formControlName="firstName" placeholder="Nome...">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="LastName">Sobrenome</label>
+                <input type="text"
+                  [ngClass]="{'uk-form-danger': (!form.controls.lastName.valid && !form.controls.lastName.pristine)}"
+                  id="LastName" class="form-control" formControlName="lastName" placeholder="Sobrenome...">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="Email">E-mail</label>
+                <input type="email"
+                  [ngClass]="{'uk-form-danger': (!form.controls.email.valid && !form.controls.email.pristine)}"
+                  id="Email" class="form-control" formControlName="email" placeholder="E-mail...">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="Password">Senha</label>
+                <input type="password"
+                  [ngClass]="{'uk-form-danger': (!form.controls.password.valid && !form.controls.password.pristine)}"
+                  id="Password" class="form-control" formControlName="password" placeholder="Senha...">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="Document">CPF</label>
+                <input type="text" mask="###.###.###-##"
+                  [ngClass]="{'uk-form-danger': (!form.controls.document.valid && !form.controls.document.pristine)}"
+                  maxlength="18" id="Document" class="form-control" formControlName="document" placeholder="CPF...">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="Image">Imagem</label>
+                <input (change)="onImageSelected($event)" type="file" id="Image" formControlName="image" class="form-control">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="Phone">Telefone</label>
+                <input type="text" id="Phone" class="form-control" formControlName="phone" placeholder="Telefone...">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="Status">Status</label>
+                <select id="Status" class="form-control" formControlName="status">
+                  <option value="0">Inativo</option>
+                  <option value="1">Ativo</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group text-right col-md-12">
+              <button [disabled]="form.invalid" (click)="submit()" class="btn btn-success">Cadastrar</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
