--- a/src/app/pages/college/professor-page/professor-page.component.html
+++ b/src/app/pages/college/professor-page/professor-page.component.html
@@ -43,7 +43,7 @@
                                         <td class="text-right">
                                             <a [routerLink]="['/professors/edit/', professor.id]" class="btn btn-info"><i
                                                     class="fa fa-edit"></i></a> &nbsp;
-                                            <button data-toggle="modal" data-target="#confirmDelete" class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                                            <button data-toggle="modal" data-target="#confirmDelete" (click)="delete(professor.id)" class="btn btn-danger"><i class="fa fa-trash"></i></button>
                                         </td>
                                     </tr>
                                 </tbody>
